Fix for speakers component wrapping issues when listing more than 8 speakers.

--- a/web/wp-content/themes/wgcacsc/assets/stylesheets/foundation.css
+++ b/web/wp-content/themes/wgcacsc/assets/stylesheets/foundation.css
@@ -7476,7 +7476,7 @@ p + ol {
   @media screen and (min-width: 65em) {
     .component-speakers__speaker:nth-child(4n) {
       clear: none; }
-    .component-speakers__speaker:nth-child(5n) {
+    .component-speakers__speaker:nth-child(4n+5) {
       clear: left; } }
 
 .component-newsletter {
